analysis/low-level-api-fir/testData/lazyResolve/errors/simple.kt
fun <caret>foo(x: Int) = 42
